assets/queries/terraform/aws/security_groups_not_used/test/negative12.tf
resource "aws_security_group" "test" {
  name = "test"
  load_balancer_type = "application"
}

module "fake" {
  source = "modules/fake"
  security_group_id = ["aws_security_group.test.id"]
}
